--- a/chapter_n.tex
+++ b/chapter_n.tex
@@ -132,7 +132,7 @@ semantic and NER feature is used to generate the Gaps fill question.
 		domain specific and NER feature is used for key selection &
 		Cloze &
 		Manually Evaluation is done
-		\begin{enumerate}[leftmargin=*]
+		\begin{enumerate}
 		\item Evaluation of the selected sentence
 		\item Evaluation of selected keyword 
 		\item Evaluation of selected distractor.
