--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -11,7 +11,9 @@
 %_____________________________________________________________________________________________ 
 \usepackage[dvips]{graphics}
 \usepackage{color}
-\usepackage{epsfig,float}
+\usepackage{epsfig}
+\usepackage{longtable}
+\usepackage{enumitem}
 %_____________________________________________________________________________________________ 
 % Page Layout
 %_____________________________________________________________________________________________
@@ -75,7 +77,7 @@
 \input{chapter_n.tex}		
 
 \appendix
-\chapter{Algorithm for Lighting}
+\chapter{Algorithm}
 \chapter{Flow Chart for Making Popcorn}
 
 \bibliographystyle{plain}  % You can change the style of writing bibliography.
