--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -74,7 +74,8 @@
 \input{chapter_1.tex}	% Add each chapter here in this fashion.
 				% No need to write all font and page specs in the chapter
 				% files. There only typesetting tags are required.
-\input{chapter_n.tex}		
+\input{chapter_2.tex}		
+\input{chapter_3.tex}		
 
 \appendix
 \chapter{Algorithm}
