adjustments to show longtable in LoT

--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -122,6 +122,7 @@ semantic and NER feature is used to generate the Gaps fill question.
 
 \begin{center}
 	\begin{longtable}{| p{0.6cm} | p{2.3cm} | p{4cm} | p{2cm} | p{5cm} |}
+		\caption{here is table}\\
 		\hline
 		{\textbf{Sr No.}} & {\textbf{Algorithm}} & {\textbf{Methodology}} &
 		{\textbf{Type of Question}} & {\textbf{Evaluation of Result}}\\[2ex]
