--- a/chapter_5.tex
+++ b/chapter_5.tex
@@ -4,7 +4,10 @@ The complete work presented here can be divided into several parts right from
 taking in a topic as input, finding out relevant documents, tagging words as
 probable answer words, and eventually generating questions from it. 
 
-%TODO IMG
+\begin{figure}
+	\caption{Architecture of Model}
+	\centering\includegraphics[width=10cm]{5.png}
+\end{figure}
 
 \section{Topic Input \& Data gathering}
 
