--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -11,7 +11,7 @@
 %_____________________________________________________________________________________________ 
 \usepackage[dvips]{graphics}
 \usepackage{color}
-\usepackage{epsfig}
+\usepackage{epsfig,float}
 \usepackage{longtable}
 \usepackage{enumitem}
 %_____________________________________________________________________________________________ 
@@ -131,7 +131,6 @@
 \input{chapter_6.tex}		
 \input{chapter_7.tex}		
 \input{chapter_8.tex}		
-\input{chapter_n.tex}		
 
 \appendix
 \chapter{Algorithm}
