references ke links added

--- a/chapter_7.tex
+++ b/chapter_7.tex
@@ -7,20 +7,19 @@ a few of the research papers, we referred -
 \begin{enumerate}
 
 \item Deep Guessing: Generating Meaningful Personalized Quizzes on Historical
-Topics by Introducing Wikicategories in Doc2Vec
+Topics by Introducing Wikicategories in Doc2Vec \url{https://ieeexplore.ieee.org/document/8501891/}
 
-\item Automatic Question Generation for Intelligent Tutoring Systems
+\item Automatic Question Generation for Intelligent Tutoring Systems \url{https://ieeexplore.ieee.org/document/8066538/}
 
-\item Context Aware Restricted Tourism Domain Question Answering System
+\item Context Aware Restricted Tourism Domain Question Answering System \url{https://ieeexplore.ieee.org/document/7877473/}
 
-\item Automatic Question Generation System
+\item Automatic Question Generation System \url{https://ieeexplore.ieee.org/abstract/document/6996216/}
 
 \item Automatic Question Generation from Children’s Stories for Companion
-Chatbot
+Chatbot \url{https://ieeexplore.ieee.org/document/8424749/}
 
 \item Computational Intelligence Framework for Automatic Quiz Question
-Generation
-
+Generation \url(https://ieeexplore.ieee.org/document/8491624}
 \end{enumerate}
 
 Among other things, we would also like to add a few of the online resources we
