--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -14,6 +14,7 @@
 \usepackage{epsfig,float}
 \usepackage{longtable}
 \usepackage{enumitem}
+\usepackage{hyperref}
 %_____________________________________________________________________________________________ 
 % Page Layout
 %_____________________________________________________________________________________________
