--- a/chapter_7.tex
+++ b/chapter_7.tex
@@ -19,7 +19,8 @@ Topics by Introducing Wikicategories in Doc2Vec \url{https://ieeexplore.ieee.org
 Chatbot \url{https://ieeexplore.ieee.org/document/8424749/}
 
 \item Computational Intelligence Framework for Automatic Quiz Question
-Generation \url(https://ieeexplore.ieee.org/document/8491624}
+Generation \url{https://ieeexplore.ieee.org/document/8491624}
+
 \end{enumerate}
 
 Among other things, we would also like to add a few of the online resources we
