maybe the final version

--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -186,7 +186,7 @@ question generated which are eventually used as distractors.
 		\\[1ex]
 		\hline
 		8. &
-		AQG System for Semantic Attributes Using String Similarity Measures (G - Ask) &
+		AQG System for Semantic Attributes Using String Similarity Measures &
 		Extracting sentence, check viability by similarity of sentences and select top three sentences &
 		Only “MCQ” type questions &
 		Manual evaluation with 75\% success. 
