--- a/chapter_7.tex
+++ b/chapter_7.tex
@@ -21,6 +21,9 @@ Chatbot \url{https://ieeexplore.ieee.org/document/8424749/}
 \item Computational Intelligence Framework for Automatic Quiz Question
 Generation \url{https://ieeexplore.ieee.org/document/8491624}
 
+\item QG-net: a data-driven question generation model for educational content
+\url{https://dl.acm.org/citation.cfm?id=3231654}
+
 \end{enumerate}
 
 Among other things, we would also like to add a few of the online resources we
