--- a/titlepage.tex
+++ b/titlepage.tex
@@ -4,7 +4,7 @@
 \DeclareGraphicsExtensions{.png, .ps}
 \begin{titlepage}
 \begin{center}
-\LARGE{\bf{QUIZ GENERATION CHATBOT\\}}	% LARGE = 17.28
+\LARGE{\bf{QUIZ GENERATION\\}}	% LARGE = 17.28
 %\vspace{10pt}
 \Large{\bf{A Project Report\\}}		% Large = 14.40
 \Large{\em{Submitted by\\}}
@@ -38,7 +38,8 @@
 %\end{figure}
 \Large{\bf{DEPARTMENT OF COMPUTER ENGINEERING AND \\INFORMATION TECHNOLOGY,\\ 
 COLLEGE OF ENGINEERING, PUNE-5}}
-\vfill
+\frame{\includegraphics[width=0.3\linewidth]{coeplogo.png}} \\
+
 \large{April, 2019}
 \end{center}
 \end{titlepage}
