--- a/certi.tex
+++ b/certi.tex
@@ -23,7 +23,7 @@
 \linespread{1.5}			% Double spacing between lines
 \selectfont
 \large{
-Certified that this project, titled ``QUIZ GENERATION CHATBOT''
+Certified that this project, titled ``QUIZ GENERATION''
 has been successfully completed by \\ 
 \begin{table}[htbp]
 	\begin{center}
