--- a/coep_compit_report.tex
+++ b/coep_compit_report.tex
@@ -133,9 +133,9 @@
 \input{chapter_7.tex}		
 \input{chapter_8.tex}		
 
-\appendix
-\chapter{Algorithm}
-\chapter{Flow Chart for Making Popcorn}
+%\appendix
+%\chapter{Algorithm}
+%\chapter{Flow Chart for Making Popcorn}
 
 \bibliographystyle{plain}  % You can change the style of writing bibliography.
 \bibliography{coep_compit_report} % Instead of a .bib file, you can just write it in 
