--- a/chapter_5.tex
+++ b/chapter_5.tex
@@ -1,8 +1,6 @@
 \chapter{System Design}
 
-The complete work presented here can be divided into several parts right from
-taking in a topic as input, finding out relevant documents, tagging words as
-probable answer words, and eventually generating questions from it. 
+The system designed can be broken down into subsystems performing the tasks of receiving a topic as input, finding out relevant documents, tagging words as probable answer words, and eventually generating questions from it. Each of these subsystems have been described below. 
 
 \begin{figure}
 	\caption{Architecture of Model}
@@ -11,42 +9,34 @@ probable answer words, and eventually generating questions from it.
 
 \section{Topic Input \& Data gathering}
 
-Initially, the user shall enter his/her topic of interest into the software. The
-software shall then crawl the web and gather links to various web pages relevant
-to the topic given by the user. On getting the links, further the software shall
-scrape those links and parse the HTML pages to get the information content in
+Initially, the software shall accept any topic as input from the user. The
+first step of the process is to crawl the web and gather links to various web pages relevant
+to the topic given by the user. On obtaining the links, the second step involves 
+scraping those links and parsing the HTML pages to get the information content in
 those web pages.  
 
-However, all the content received can be classified into three parts. The first
+The content thus received can be classified into three parts. The first
 part consists of markup language tasks and syntax, the second part shall contain
 data unrelated to the topic of interest, and the third shall be the data which
-is useful and relevant both to the topic of interest. The data classified into
-the first part, is removed by searching for markup language tasks in the
-obtained data.  On finding such tags, the lines containing such tags shall be
-eliminated from the useful data text. For identifying data in the second part,
-the semantic meaning of the words and the web page from where the data has been
-input is taken into consideration. Thus eventually the system has data which can
-be used for generating questions on the users topic of interest.
-
+is both useful and relevant to the topic of interest. In this step, an algorithm has been written which searches the data related to markup language tags and eliminates the same from the scraped data. The algorithm then identifies unrelated data by taking into consideration the semantic meaning of the words. After the elimination of such, the useful and relevant data obtained is fed as input to the next subsystem. 
 
 \section{Pre processing block}
 
-The processing done at this stage can be broken down into 4 independent tasks.
-The output of each of these four tasks work as features for the question
-generation algorithm. The four tasks and their work can be summarized as follows
--
+The processing block consists of four independent tasks.
+The output of each of these four tasks works as features for the question
+generation algorithm. The four tasks and their work can be summarized as follows -
 
 \begin{enumerate}
 
-\item Case of the word in context - This feature determines whether the first
+\item Case Tagging - This feature determines whether the first
 letter of the word is in lower or upper case. The output of this case thus
 determines whether the word is the starting word of the context. In quite a few
 cases, the starting word of the context dominates in meaning, and hence has been
 considered as a feature in the problem.
 
 \item NER Tagging - The 7 set Stanford NER Tagging is used in the system. The
-NER Tagging helps in finding out a type of a noun the word is, like a place, a
-date or a person. As per the tag different Wh questions are created and hence
+NER Tagging helps in finding out the type of a noun to which the word belongs, i.e if it is a place, a
+date or a person. Depending on the tag different kinds of 'Wh' questions are created and hence
 the feature is of great significance in the problem.
 
 \item POS Tagging - POS tags are important in generating patterns based on their
@@ -55,19 +45,18 @@ that form answer words in the training sentences are most probable to be the
 best sources for generating questions in test contexts as well.
 
 \item Answer Words - This feature is the most important of all the four
-features. This feature talks of whether the word in consideration is an answer
-word or not, in the question to be formed. Only those words that are answer
+features. This feature identifies whether the word in consideration could be a potential answer word, on which a question can be formed. Only those words that are answer
 words are given paramount importance in the question generating process.
 
 \end{enumerate}
 
-So to achieve this goal, a simple model containing a lstm and linear layer is
-created. The output of the model is binary string which is 1 for the Answer Tag
-and 0 elsewhere.  The LSTM help in remembering the previous answer tags thus
-helping in predicting the current tag.
+In order to achieve this goal, a model containing a LSTM and dense layers is
+developed. The output of the model is binary string which is 1 for the Answer Tag
+and 0 for non answer words. The output of this preprocessing subsystem is fed to the Question Generation Algorithm subsystem as input. 
 
 \section{Question Generation - Algorithm}
 
+The Question Generation Algorithm performs three major tasks - 
 \begin{itemize}
 
 	\item \textbf{Context Reader and Encoder}
@@ -98,7 +87,7 @@ Context reader is a bi-directional long short-term memory (bi-LSTM) network with
 
 \section{Output}
 
-In the end, the system shall generate questions on either the topic of interest
+This is the last subsystem of the process. Here, the system shall generate questions on either the topic of interest
 specified to the user or the text given as input to the system. The system can
 generate three types of questions. The first type is Fill in The Blank
 questions, where a factual or important word is left blank in a sentence from
@@ -106,5 +95,4 @@ the input text. The second type is a one word answer, where an important
 sentence from the input text, is converted to a question and presented to the
 user. Finally, the system can also generate reading comprehension type of
 questions, wherein the input text on which questions are generated is made
-available to the user while he/she is answering the questions
-
+available to the user while he/she is answering the questions.
